Upgraded fingerprint and event

--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!doctype html>
 <html>
- <meta charset="utf-8">
+<meta charset="utf-8">
 <head>
-    <!--<script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>-->
 </head>
 <body>
 
@@ -27,22 +26,17 @@
     </table>
 </form>
 
-<!--
-<script src="fingerprint2.js"></script>
-<script src="fireradar.js"></script>
-<script src="cryptojs/core-min.js"></script>
-<script src="cryptojs/cipher-core-min.js"></script>
-<script src="cryptojs/aes-min.js"></script>
-<script src="jquery.min.js"></script>
--->
+<script type="text/javascript" src="fingerprint3.js"></script>
+<script type="text/javascript" src="fireradar.js"></script>
+<script type="text/javascript" src="jquery.min.js"></script>
+<script type="text/javascript" src="jquery.md5.js"></script>
 
-<script src="fireradar.min.js"></script>
 
 <script>
     //getToken();
-    new FireRadar().getFingerPrint(function(result){
-        alert(result);
-    });
+    /*new FireRadar1({appcode: '00-xjd8Dk-test', encryption: 'yXnxFgtgSiyPoSM0'}).sendEvent(function (result) {
+        //alert(result);
+    });*/
 </script>
 </body>
 </html>
